<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgLightPink">


            <ImageView
                android:id="@+id/profile_log_out_bt"
                style="@style/icon"
                android:src="@drawable/ic_log_out"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_head"
                style="@style/toolbar_title"
                android:text=""
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_hat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_hat_bg"
        android:backgroundTint="@color/bgLightPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="20dp"
            android:src="@raw/basic_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_hat" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:textColor="@color/darkBrown"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <Button
            android:id="@+id/edit_profile_btn"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_regular"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/lightBrown"
            android:textSize="18sp"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_stats"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/profile_stats_bg"
            android:backgroundTint="@color/bgDarkPink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_btn">

            <TextView
                android:id="@+id/photos_text"
                style="@style/stats_text"
                android:text="@string/photos"
                app:layout_constraintEnd_toStartOf="@id/followers_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/followers_text"
                style="@style/stats_text"
                android:text="@string/followers"
                app:layout_constraintEnd_toStartOf="@id/follows_text"
                app:layout_constraintStart_toEndOf="@id/photos_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/follows_text"
                style="@style/stats_text"
                android:text="@string/follows"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/followers_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/photos_count_text"
                style="@style/stats_count_text"
                tools:text="567"
                app:layout_constraintEnd_toEndOf="@id/photos_text"
                app:layout_constraintStart_toStartOf="@id/photos_text"
                app:layout_constraintTop_toBottomOf="@id/photos_text" />

            <TextView
                android:id="@+id/followers_count_text"
                style="@style/stats_count_text"
                tools:text="12,454"
                app:layout_constraintEnd_toEndOf="@id/followers_text"
                app:layout_constraintStart_toStartOf="@id/followers_text"
                app:layout_constraintTop_toBottomOf="@id/followers_text" />

            <TextView
                android:id="@+id/follows_count_text"
                style="@style/stats_count_text"
                tools:text="127"
                app:layout_constraintEnd_toEndOf="@id/follows_text"
                app:layout_constraintStart_toStartOf="@id/follows_text"
                app:layout_constraintTop_toBottomOf="@id/follows_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintTop_toBottomOf="@+id/profile_hat"/>

    <include layout="@layout/bottom_navigation_view" />


</androidx.constraintlayout.widget.ConstraintLayout>